--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
             <version>11.0.6</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
 </project>
